bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:3: error: value =< is not a member of Int
  if (Math.abs(n-100)=<10) {
                     ^NearHundred:5: error: value =< is not a member of Int
  } else if (Math.abs(n-200)=<10) {
                            ^